@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-05-11T00:57:22Z",
-  "count_outdated" : 1302,
-  "uniques_outdated" : 824,
-  "count" : 1316,
-  "uniques" : 838,
+  "timestamp" : "2025-05-12T00:56:21Z",
+  "count_outdated" : 1305,
+  "uniques_outdated" : 827,
+  "count" : 1317,
+  "uniques" : 839,
   "clones" : [
-    {
-      "timestamp": "2025-04-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-04-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-29T00:00:00Z",
       "count": 1,
@@ -115,6 +97,15 @@
     },
     {
       "timestamp": "2025-05-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
