@@ -1,17 +1,7 @@
 {
-  "count": 13,
-  "uniques": 2,
+  "count": 12,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-04-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-04-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-29T00:00:00Z",
       "count": 1,
@@ -64,6 +54,11 @@
     },
     {
       "timestamp": "2025-05-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
