@@ -1,3 +1,12 @@
+2025-05-12T00:56:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14961523150 # 641
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-12
+* notice: last 14d: unq all: 1 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 824 1302 / 838 1316
+* notice: next accum: outdated-unq outdated-all / unq all: 827 1305 / 839 1317
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-27 2025-04-28] / [2025-05-11]
+
 2025-05-11T00:57:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14950750934 # 640
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-11
